# CrateKey

./: .gitignore  CLAUDE.md  docker-compose.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_tables.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/middleware/: rate_limit.py
apps/backend/app/models/: __init__.py  event.py  plan.py  track.py  user.py
apps/backend/app/repositories/: events.py  tracks.py
apps/backend/app/schemas/: resolve.py
apps/backend/app/services/: getsongbpm.py  hashing.py  key_resolver.py  title_parser.py
apps/backend/tests/: conftest.py  test_key_resolver.py  test_resolve_endpoint.py
apps/extension/: eslint.config.js  manifest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/extension/src/background/: api.ts  index.ts  resolver.ts
apps/extension/src/content/: run.ts
apps/extension/src/offscreen/: analyze.ts  offscreen.html  offscreen.ts
apps/extension/src/popup/: App.tsx  index.html
apps/extension/src/types/: essentia.d.ts  messages.ts  track.ts
apps/extension/tests/: resolver.test.ts  setup.ts
apps/extension/tests/fixtures/: beatport.html
docs/decisions/: 0001-key-resolution-hierarchy.md
