[project]
name = "cratekey-backend"
version = "0.1.0"
description = "CrateKey FastAPI backend — track key resolution and caching"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "anthropic>=0.40",
    "asyncpg>=0.30",
    "greenlet>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
